[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/charecters/lil_kid.gd" id="1_weaah"]
[ext_resource type="Texture2D" uid="uid://j56ts4npyhah" path="res://assets/textures/ariel katan.png" id="2_lkffe"]
[ext_resource type="AudioStream" uid="uid://dl31fpawdlao8" path="res://assets/sounds/new_meme_sounds/windows_off.mp3" id="3_0a7qo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pchd"]
size = Vector2(22.4518, 29.258)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixqhs"]
size = Vector2(29, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfxy8"]
size = Vector2(35, 22)

[node name="lil_kid" type="CharacterBody2D"]
script = ExtResource("1_weaah")

[node name="wall_check" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collide_with_areas = true

[node name="wall_check2" type="RayCast2D" parent="."]
target_position = Vector2(15, 0)
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.499998, 0.499998)
rotation = 3.14159
scale = Vector2(1.29165, 0.922824)
shape = SubResource("RectangleShape2D_1pchd")

[node name="kid_dead" type="Area2D" parent="."]
position = Vector2(0, -15)
collision_layer = 3
collision_mask = 3

[node name="kid_dead_collision" type="CollisionShape2D" parent="kid_dead"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_ixqhs")

[node name="player_dead" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_dead"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_bfxy8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("2_lkffe")

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0a7qo")
volume_db = -20.243

[connection signal="body_entered" from="kid_dead" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="player_dead" to="." method="_on_player_dead_body_entered"]
